fix(section): Increase padding for better mobile scroll whitespace.

--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: 5rem 0 2rem;
+  padding: 8rem 0 2rem;
 
   @include media($screen-sm) {
     padding: 14rem 0 4rem;
